# vut-avs-project2

./: .gitignore  Makefile  PMC-xharmi00.txt  README.md
scripts/: extract_point_cloud.py  generate_data_and_plots.sh  generate_plots.py  measure_grid_scaling.sh  measure_input_scaling.sh
src/: CMakeLists.txt  main.cpp
src/common/: base_mesh_builder.cpp  base_mesh_builder.h  parametric_scalar_field.cpp  parametric_scalar_field.h  ref_mesh_builder.cpp  ref_mesh_builder.h  vector_helpers.h
src/parallel_builder/: loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.cpp  tree_mesh_builder.h
